--- a/src/components/UnifiedCircleButton.module.scss
+++ b/src/components/UnifiedCircleButton.module.scss
@@ -14,6 +14,7 @@
     opacity: 0;
     pointer-events: none;
     transform: scale(0);
+    height: 0;
   }
 }
 
